/*
 * $Id: ChangeLog,v 1.2703 2004/03/31 20:13:34 andijahja Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-03-31 23:10 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rdd/dbcmd.c
    ! fixed __DBCONTINUE and some unterminated strings - thanks Walter.

  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
    ! fixed scope setting for descending orders when there was more
      keys with the same value as scope one

2004-04-01 03:20 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * tests/pp_harb.ch
    ! put function protoypes hb_hrbAsmCreateFun() under extern "C"

2004-03-31 23:40 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * source/compiler/cmdcheck.c
  * source/compiler/hbusage.c
    ! Fixed a little bug: -d on command line without a #define name should
      not create an empty #define.
    + Added a new command line option, -undef:<id>, which undefines a
      predefined #define.

2004-03-31 12:45 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * source/rdd/dbcmd.c
    ! Fix RDDSETDEFAULT function. Missing set '\0' at end of string
      after strncpy().

2004-03-31 21:10 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * include/hashapi.h
    ! put function protoypes under extern "C"

2004-03-31 18:00 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * source/compiler/harbour.sly
    + Generate line number information for the debugger for DO CASE statement
      (borrowed from Harbour, by Ryszard Glab).
  * source/debug/debugger.prg
    + Show line number information when source file can't be found
      (borrowed from Harbour, by Ryszard Glab).

2004-03-31 15:45 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * source/vm/macro.c
    ! Fixed hb_compMemvarGenPCode(), hb_compGenPopVar(),
      hb_compGenPopAliasedVar() to not set any error flag and not generate