@@ -1,5 +1,5 @@
 /*
- * $Id: ads1.c,v 1.36 2004/03/26 08:47:52 brianhays Exp $
+ * $Id: ads1.c,v 1.37 2004/03/31 02:16:42 druzus Exp $
  */
 
 /*
@@ -3093,7 +3093,20 @@ static ERRCODE adsClearFilter( ADSAREAP pArea )
 }
 
 #define  adsClearLocate           NULL
-#define  adsClearScope            NULL
+
+static ERRCODE adsClearScope( ADSAREAP pArea )
+{
+   HB_TRACE(HB_TR_DEBUG, ("adsClearScope(%p)", pArea));
+
+   if( pArea->hOrdCurrent )
+   {
+      AdsClearScope( pArea->hOrdCurrent, (UNSIGNED16) 1);  /* ADS scopes are 1/2 instead of 0/1 */
+      AdsClearScope( pArea->hOrdCurrent, (UNSIGNED16) 2);  /* ADS scopes are 1/2 instead of 0/1 */
+   }
+
+   return SUCCESS;
+}
+
 #define  adsCountScope            NULL
 #define  adsFilterText            NULL
 
