@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2703 2004/03/31 20:13:34 andijahja Exp $
+ * $Id: ChangeLog,v 1.2704 2004/03/31 21:02:04 druzus Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,13 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-04-01 03:11 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
+  * xharbour/contrib/rdd_ads/ads1.c
+    + adsClearScope() method added
+  * xharbour/source/rdd/dbfntx/dbfntx1.c
+    ! fixed returned values by DBORDINFO(,,DBOI_NUMBER) when
+      there was no proper tag.
 
 2004-03-31 23:10 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
   * xharbour/source/rdd/dbcmd.c
